--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <!-- Primary colors from app icon gradient -->
+    <color name="orange_primary">#FFA500</color>
+    <color name="red_primary">#FF4500</color>
+    <color name="orange_light">#FFB84D</color>
+    <color name="red_dark">#E03D00</color>
+    
+    <!-- Base colors -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <!-- Accent colors -->
+    <color name="orange_accent">#FF8C00</color>
+    <color name="red_accent">#FF0000</color>
+    
+    <!-- Surface colors -->
+    <color name="surface_light">#FFF5F5F5</color>
+    <color name="surface_dark">#FF1A1A1A</color>
+    
+    <!-- Text colors -->
+    <color name="text_primary">#FF000000</color>
+    <color name="text_secondary">#FF666666</color>
+    <color name="text_on_primary">#FFFFFFFF</color>
 </resources>
